IDE-Fixes