@@ -18,6 +18,7 @@ package de.cuioss.jsf.components.converter;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 import jakarta.faces.component.UIComponent;
 import jakarta.faces.context.FacesContext;
@@ -57,18 +58,14 @@ public class DecodingStringConverter extends AbstractConverter<String> {
 
     private static String decode(final String value) throws ConverterException {
         try {
-            return URLDecoder.decode(value, "UTF-8");
-        } catch (UnsupportedEncodingException | IllegalArgumentException e) {
+            return URLDecoder.decode(value, StandardCharsets.UTF_8);
+        } catch (IllegalArgumentException e) {
             throw new ConverterException(e);
         }
     }
 
     private static String encode(final String value) throws ConverterException {
-        try {
-            return URLEncoder.encode(value, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new ConverterException(e);
-        }
+        return URLEncoder.encode(value, StandardCharsets.UTF_8);
     }
 
 }
